--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html lang="en">
 <head>
+  <meta name="author"
+  content="Scott Miller">
+  <meta name="description"
+  content="This is a websit I am using to practice HTML, CSS, and Javascript.  This section is where Search Engine Optomization (SEO) would be done.  This information will appear in search engine results.">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scott's Web Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Roboto:ital,wght@0,500;1,100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
   <h1>Scott's Very Cool Practice Web Page</h1>
@@ -24,10 +33,29 @@
     <input type="text">
   </p>
   <p>
-    If you want to use special characters like &lt;, &gt;, &amp;, or &apos; in your HTML, it is necessary to use &quot;character entity references&quot;. A complete list of these can be found at: <a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references" title="Wikipedia list of XML and HTML character entity references" target="_blank">List of XML and HTML character entity references</a> (Wikipedia).
+    If you want to use special characters like <strong>&lt;</strong>, <strong>&gt;</strong>, <strong>&amp;</strong>, or <strong>&apos;</strong> in your HTML, it is necessary to use &quot;character entity references&quot;. A complete list of these can be found at: <a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references" title="Wikipedia list of XML and HTML character entity references" target="_blank">List of XML and HTML character entity references</a> (Wikipedia).
   </p>
 
   <!--This is how you add comments in HTML-->
+  <script src="app.js"></script>
 
-</body>
-</html>
+  <!--This is an example of an html unordered list.-->
+
+  <p>This is an unordered list:</p>
+  <ul>
+    <li>milk</li>
+    <li>eggs</li>
+    <li>bread</li>
+    <li>hummus</li>
+  </ul>
+
+  <!--This is an example of an ordered list-->
+  <p>This is an ordered list:</p>
+  <ol>
+    <li>Drive to the end of the road</li>
+    <li>Turn right</li>
+    <li>Go straight across the first two roundabouts</li>
+    <li>Turn left at the third roundabout</li>
+    <li>The school is on your right, 300 meters up the road</li>
+  </ol>
+  </html>
