Minor text correction

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>Scott's Very Cool Practice Web Page</h1>
   <p>
     <em>This is the web page I am currently using to practice the things I am learning about <strong>HTML</strong>, <strong>CSS</strong>, and <strong>Javascript</strong>.</em>
-    <em>I will be starting the <a href="https://boisecodeworks.com/" title="The Boise Code Works homepage" target="_blank">Boise Code Works</a> Immersive Full Stack prgram later this month. In the meantime, I am working hard to learn as much as I can before class starts from sites like <a href="https://codecademy.com/" title="Codecademy" target="_blank">Codecademy</a> and <a href="https://developer.mozilla.org/en-US" title="Mozilla Developer Network" target="_blank">MDN Web Docs</a>.</em>
+    <em>I will be starting the <a href="https://boisecodeworks.com/" title="The Boise Code Works homepage" target="_blank">Boise Code Works</a> Immersive Full Stack prgram later this month. In the meantime, I am working hard to learn as much as I can from sites like <a href="https://codecademy.com/" title="Codecademy" target="_blank">Codecademy</a> and <a href="https://developer.mozilla.org/en-US" title="Mozilla Developer Network" target="_blank">MDN Web Docs</a>.</em>
   </p>
   <p>
     <img src="https://publicdomainvectors.org/photos/rocket-312767.png">
