Hummus recipie added

--- a/index.html
+++ b/index.html
@@ -23,25 +23,37 @@
   <p>
     <img src="https://publicdomainvectors.org/photos/rocket-312767.png">
   </p>
-
-  <p>
-    This input is disabled
-    <input type="text" disabled>
-  </p>
-  <p>
-    This input is not disabled
-    <input type="text">
-  </p>
+  <h3>
+    <p>Here is some helpful information HTML programming information:</p>
+  </h3>
   <p>
     If you want to use special characters like <strong>&lt;</strong>, <strong>&gt;</strong>, <strong>&amp;</strong>, or <strong>&apos;</strong> in your HTML, it is necessary to use &quot;character entity references&quot;. A complete list of these can be found at: <a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references" title="Wikipedia list of XML and HTML character entity references" target="_blank">List of XML and HTML character entity references</a> (Wikipedia).
+  </p>
+
+  <h3>
+    <p>
+      This input is disabled:
+    </p>
+  </h3>
+  <p>
+    <input type="text" disabled>
+  </p>
+  <h3>
+    <p>
+      This input is not disabled:
+    </p>
+  </h3>
+  <p>
+    <input type="text">
   </p>
 
   <!--This is how you add comments in HTML-->
   <script src="app.js"></script>
 
   <!--This is an example of an html unordered list.-->
-
-  <p>This is an unordered list:</p>
+  <h3>
+    <p>This is an <u>unordered</u> list:</p>
+  </h3>
   <ul>
     <li>milk</li>
     <li>eggs</li>
@@ -50,7 +62,9 @@
   </ul>
 
   <!--This is an example of an ordered list-->
-  <p>This is an ordered list:</p>
+  <h3>
+    <p>This is an <u>ordered</u> list:</p>
+  </h3>
   <ol>
     <li>Drive to the end of the road</li>
     <li>Turn right</li>
@@ -58,4 +72,58 @@
     <li>Turn left at the third roundabout</li>
     <li>The school is on your right, 300 meters up the road</li>
   </ol>
+
+  <h3>
+    <p>
+      Here is a hummus recipie (to give me more practice with HTML):
+    </p>
+  </h3>
+
+  <p>
+    Quick hummus recipe
+  </p>
+  <p>
+    This recipe makes quick, tasty hummus, with no messing. It has been adapted from a number of different recipes that I have read over the years.
+  </p>
+  <p>
+    Hummus is a delicious thick paste used heavily in Greek and Middle Eastern dishes. It is very tasty with salad, grilled meats and pitta breads.
+  </p>
+  <p>
+    Ingredients
+  </p>
+  <ul>
+    <li>1 can (400g) of chick peas (garbanzo beans)</li>
+    <li>175g of tahini</li>
+    <li>6 sundried tomatoes</li>
+    <li>Half a red pepper</li>
+    <li>A pinch of cayenne pepper</li>
+    <li>1 clove of garlic</li>
+    <li>A dash of olive oil</li>
+  </ul>
+  <p>
+    Instructions
+  </p>
+  </p>
+    <ol>
+      <li>Remove the skin from the garlic, and chop coarsely.</li>
+      <li>Remove all the seeds and stalk from the pepper, and chop coarsely.</li>
+      <li>Add all the ingredients into a food processor.</li>
+      <li>Process all the ingredients into a paste.</li>
+      <ul>
+        <li>If you want a coarse "chunky" hummus, process it for a short time.</li>
+        <li>If you want a smooth hummus, process it for a longer time.</li>
+      </ul>
+    </ol>
+  <p>
+    For a different flavour, you could try blending in a small measure of lemon and coriander, chili pepper, lime and chipotle, harissa and mint, or spinach and feta cheese. Experiment and see what works for you.
+  </p>
+  <p>
+    Storage
+  </p>
+  <p>
+    Refrigerate the finished hummus in a sealed container. You should be able to use it for about a week after you've made it. If it starts to become fizzy, you should definitely discard it.
+
+    Hummus is suitable for freezing; you should thaw it and use it within a couple of months.
+  </p>
+
   </html>
