--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <em>I will be starting the <a href="https://boisecodeworks.com/" title="The Boise Code Works homepage" target="_blank">Boise Code Works</a> Immersive Full Stack prgram later this month. In the meantime, I am working hard to learn as much as I can from sites like <a href="https://codecademy.com/" title="Codecademy" target="_blank">Codecademy</a> and <a href="https://developer.mozilla.org/en-US" title="Mozilla Developer Network" target="_blank">MDN Web Docs</a>.</em>
   </p>
   <p>
-    <img src="https://publicdomainvectors.org/photos/rocket-312767.png">
+    <img src="https://publicdomainvectors.org/photos/rocket-312767.png" alt="Oops, Where is the Rocket Picture?">
   </p>
   <h3>
     <p>Here is some helpful information HTML programming information:</p>
@@ -74,56 +74,7 @@
   </ol>
 
   <h3>
-    <p>
-      Here is a hummus recipie (to give me more practice with HTML):
-    </p>
+    If you would like to see a hummus recipie <a href="hummus.html">click on this link</a>.
   </h3>
-
-  <p>
-    Quick hummus recipe
-  </p>
-  <p>
-    This recipe makes quick, tasty hummus, with no messing. It has been adapted from a number of different recipes that I have read over the years.
-  </p>
-  <p>
-    Hummus is a delicious thick paste used heavily in Greek and Middle Eastern dishes. It is very tasty with salad, grilled meats and pitta breads.
-  </p>
-  <p>
-    Ingredients
-  </p>
-  <ul>
-    <li>1 can (400g) of chick peas (garbanzo beans)</li>
-    <li>175g of tahini</li>
-    <li>6 sundried tomatoes</li>
-    <li>Half a red pepper</li>
-    <li>A pinch of cayenne pepper</li>
-    <li>1 clove of garlic</li>
-    <li>A dash of olive oil</li>
-  </ul>
-  <p>
-    Instructions
-  </p>
-  </p>
-    <ol>
-      <li>Remove the skin from the garlic, and chop coarsely.</li>
-      <li>Remove all the seeds and stalk from the pepper, and chop coarsely.</li>
-      <li>Add all the ingredients into a food processor.</li>
-      <li>Process all the ingredients into a paste.</li>
-      <ul>
-        <li>If you want a coarse "chunky" hummus, process it for a short time.</li>
-        <li>If you want a smooth hummus, process it for a longer time.</li>
-      </ul>
-    </ol>
-  <p>
-    For a different flavour, you could try blending in a small measure of lemon and coriander, chili pepper, lime and chipotle, harissa and mint, or spinach and feta cheese. Experiment and see what works for you.
-  </p>
-  <p>
-    Storage
-  </p>
-  <p>
-    Refrigerate the finished hummus in a sealed container. You should be able to use it for about a week after you've made it. If it starts to become fizzy, you should definitely discard it.
-
-    Hummus is suitable for freezing; you should thaw it and use it within a couple of months.
-  </p>
 
   </html>
