Changed rocket icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <em>I will be starting the <a href="https://boisecodeworks.com/" title="The Boise Code Works homepage" target="_blank">Boise Code Works</a> Immersive Full Stack prgram later this month. In the meantime, I am working hard to learn as much as I can from sites like <a href="https://codecademy.com/" title="Codecademy" target="_blank">Codecademy</a> and <a href="https://developer.mozilla.org/en-US" title="Mozilla Developer Network" target="_blank">MDN Web Docs</a>.</em>
   </p>
   <p>
-    <img src="https://publicdomainvectors.org/photos/rocket-312767.png" alt="Oops, Where is the Rocket Picture?">
+    <img src="rocket-312767.webp">
   </p>
   <h3>
     <p>Here is some helpful information HTML programming information:</p>
