--- a/index.html
+++ b/index.html
@@ -24,57 +24,13 @@
     <img src="rocket-312767.webp">
   </p>
   <h3>
-    <p>Here is some helpful information HTML programming information:</p>
-  </h3>
-  <p>
-    If you want to use special characters like <strong>&lt;</strong>, <strong>&gt;</strong>, <strong>&amp;</strong>, or <strong>&apos;</strong> in your HTML, it is necessary to use &quot;character entity references&quot;. A complete list of these can be found at: <a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references" title="Wikipedia list of XML and HTML character entity references" target="_blank">List of XML and HTML character entity references</a> (Wikipedia).
-  </p>
-
-  <h3>
-    <p>
-      This input is disabled:
-    </p>
-  </h3>
-  <p>
-    <input type="text" disabled>
-  </p>
-  <h3>
-    <p>
-      This input is not disabled:
-    </p>
-  </h3>
-  <p>
-    <input type="text">
-  </p>
-
-  <!--This is how you add comments in HTML-->
-  <script src="app.js"></script>
-
-  <!--This is an example of an html unordered list.-->
-  <h3>
-    <p>This is an <u>unordered</u> list:</p>
+    Here is some stuff I've been working on to practice HTML, CSS, and JavaScript:
   </h3>
   <ul>
-    <li>milk</li>
-    <li>eggs</li>
-    <li>bread</li>
-    <li>hummus</li>
+    <li><a href="hummus.html">Hummus Recipie</a></li>
+    <li><a href="html-practice.html">HTML Practice</a></li>
+    <li><a href="https://idmiller2020.github.io/Balloonpop/">Balloon Pop Game</a></li>
+    <li><a href="https://idmiller2020.github.io/moody-kittens/">Moody Kittens Game</a></li>
   </ul>
-
-  <!--This is an example of an ordered list-->
-  <h3>
-    <p>This is an <u>ordered</u> list:</p>
-  </h3>
-  <ol>
-    <li>Drive to the end of the road</li>
-    <li>Turn right</li>
-    <li>Go straight across the first two roundabouts</li>
-    <li>Turn left at the third roundabout</li>
-    <li>The school is on your right, 300 meters up the road</li>
-  </ol>
-
-  <h3>
-    If you would like to see a hummus recipie <a href="hummus.html">click on this link</a>.
-  </h3>
 
   </html>
