Rearranged pages and links

--- a/html-practice.html
+++ b/html-practice.html
@@ -60,6 +60,11 @@
     <li>Turn left at the third roundabout</li>
     <li>The school is on your right, 300 meters up the road</li>
   </ol>
-  <a href="index.html">Back to Main Page</a>
+  <p>
+    <a href="hummus.html">Hummus Recipie (more HTML practice)</a>
+  </p>
+  <p>
+    <a href="index.html">Back to Main Page</a>
+  </p>
 </body>
 </html>
