--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
-  <h1>Scott's Very Cool Practice Web Page</h1>
+<header>
+  <div>
+    <h1>Scott's Very Cool Practice Web Page</h1>
+  </div>
+</header>
+
   <p>
     <em>This is the web page I am currently using to practice the things I am learning about <strong>HTML</strong>, <strong>CSS</strong>, and <strong>Javascript</strong>.</em>
     <em>I will be starting the <a href="https://boisecodeworks.com/" title="The Boise Code Works homepage" target="_blank">Boise Code Works</a> Immersive Full Stack prgram later this month. In the meantime, I am working hard to learn as much as I can from sites like <a href="https://codecademy.com/" title="Codecademy" target="_blank">Codecademy</a> and <a href="https://developer.mozilla.org/en-US" title="Mozilla Developer Network" target="_blank">MDN Web Docs</a>.</em>
@@ -27,9 +32,10 @@
     Here is some stuff I've been working on to practice HTML, CSS, and JavaScript:
   </h3>
   <ul>
+    <li><a href="https://idmiller2020.github.io/coffee_bean_page/" target="_blank">Coffee Beans</a></li>
     <li><a href="html-practice.html">HTML Practice</a></li>
-    <li><a href="https://idmiller2020.github.io/Balloonpop/">Balloon Pop Game</a></li>
-    <li><a href="https://idmiller2020.github.io/moody-kittens/">Moody Kittens Game</a></li>
+    <li><a href="https://idmiller2020.github.io/Balloonpop/" target="_blank">Balloon Pop Game</a></li>
+    <li><a href="https://idmiller2020.github.io/moody-kittens/" target="_blank">Moody Kittens Game</a></li>
   </ul>
 
   </html>
