Page with background picture added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   </h3>
   <ul>
     <li><a href="https://idmiller2020.github.io/coffee_bean_page/" target="_blank">Coffee Beans</a></li>
+    <li><a href="https://idmiller2020.github.io/background_pic_page/" target="_blank">Web Page With Background Picture</a></li>
     <li><a href="html-practice.html">HTML Practice</a></li>
     <li><a href="https://idmiller2020.github.io/Balloonpop/" target="_blank">Balloon Pop Game</a></li>
     <li><a href="https://idmiller2020.github.io/moody-kittens/" target="_blank">Moody Kittens Game</a></li>
